--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="status" [class.offline]="status === OnlineStatusType.OFFLINE">
+  {{ status ? 'Online' : 'Offline pero puedes seguir Trabajando!!' }}
+</div>
+
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
